[project]
name = "stockoption"
version = "1.0.0"
authors = [
  { name = "Jonathan Hess", email = "yonikhess@gmail.com"},
]
description = "A package to price stock options"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy >= 1.18.5",
  "scipy >= 1.5.4",
]

[project.urls]
"Homepage" = "https://github.com/Mr-Elysium/pyoptions"
"Bug Tracker" = "https://github.com/Mr-Elysium/pyoptions/issues"